Fixed some spacing issues in css

--- a/codenames/src/App.css
+++ b/codenames/src/App.css
@@ -13,9 +13,12 @@ html {
   width: 800px;
 }
 
+.cell{
+  	padding: 53px 0 0 0;
+}
+
 p{
   margin: 0 auto;
-	padding: 53px 0 0 0;
 	border: 0;
 	font-size: 18px;
   font-family: 'Avenir', Arial, Helvetica, sans-serif;
@@ -36,6 +39,7 @@ p{
 
 .App{
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .switch {
